dev backend(Fix): fix recipient identification method

--- a/sms/chat/templates/chat/lobby.html
+++ b/sms/chat/templates/chat/lobby.html
@@ -18,7 +18,7 @@
 
         <div class="ip-header">
             <h4>Your ID: </h4>
-            <h2 id="myID">{{ random }}</h2>
+            <h2 id="myID"></h2>
         </div>
         <p>Tell a friend your id so that he can write to you</p>
         <input type="destinationID" id="userID" class="form-control" placeholder="Enter recipient ID">
